--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -68,6 +68,18 @@ html {
         --sidebar-accent-foreground: 0 0% 30%;
         --sidebar-border: 0 0% 91%;
         --sidebar-ring: 217.2 91.2% 59.8%;
+
+        --vis-tooltip-background-color: none !important;
+        --vis-tooltip-border-color: none !important;
+        --vis-tooltip-text-color: none !important;
+        --vis-tooltip-shadow-color: none !important;
+        --vis-tooltip-backdrop-filter: none !important;
+        --vis-tooltip-padding: none !important;
+
+        --vis-primary-color: var(--primary);
+        /* change to any hsl value you want */
+        --vis-secondary-color: 160 81% 40%;
+        --vis-text-color: var(--muted-foreground);
     }
 
     .dark {
